[tool.poetry]
name = "prioritized-sampling-and-gradient-steps"
version = "0.1.0"
description = ""
authors = ["Ryan Pégoud <ryanpegoud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.24"
jaxlib = "^0.4.24"
flax = "^0.8.1"
chex = "^0.1.85"
flashbax = "^0.1.0"
plotly = "^5.19.0"
brax = "^0.10.0"
gymnax = "^0.0.6"
optax = "^0.1.9"
numpy = "^1.26.4"
nbformat = "^5.9.2"
distrax = "^0.1.5"
pandas = "^2.2.0"
tyro = "^0.7.3"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
